--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,26 @@
 TZ=UTC
-PORT=3333
+PORT=3000
 HOST=localhost
 LOG_LEVEL=info
-APP_KEY=
+APP_KEY=eLtGnGn2e66pD_UUSAY9PfD8jjoCzlsz
 NODE_ENV=development
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_USER=postgres
+DB_PASSWORD=1234
+DB_DATABASE=prototipo_adonisjs
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
+
+DRIVE_DISK=s3
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET=
+
+LOG_LEVEL=info
+
+BASE_URL_FRONT=http://localhost:8080
